--- a/Modulo1/pom.xml
+++ b/Modulo1/pom.xml
@@ -66,5 +66,20 @@
       <artifactId>aws-lambda-java-core</artifactId>
       <version>1.1.0</version>
     </dependency>
+    <dependency>
+    	<groupId>ca.umontreal.iro</groupId>
+    	<artifactId>ssj</artifactId>
+    	<version>2.5</version>
+    </dependency>
+    <dependency>
+    	<groupId>ca.umontreal.iro.simul</groupId>
+    	<artifactId>ssj</artifactId>
+    	<version>3.2.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.commons</groupId>
+    	<artifactId>commons-math3</artifactId>
+    	<version>3.1.1</version>
+    </dependency>
   </dependencies>
 </project>
